--- a/Romanian/main/Provision.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Provision.apk/res/values-ro/strings.xml
@@ -29,7 +29,7 @@
     <string name="next_fingerprint">Următoarea</string>
     <string name="other_settings">Setări adiţionale</string>
     <string name="other_settings_auto_update">Actualizați în mod automat</string>
-    <string name="other_settings_auto_update_summary">MIUI va selecta ora de descărcare și instalare a actualizărilor.</string>
+    <string name="other_settings_auto_update_summary">MIUI va selecta ora cea mai potrivită pentru descărcarea și instalarea actualizărilor.</string>
     <string name="other_settings_location">Locaţie</string>
     <string name="other_settings_location_summary">Permiteți aplicațiilor să acceseze locația dvs.</string>
     <string name="other_settings_upload_debug_log_summary">Datele de diagnosticare pot include informații despre modul dumneavoastră de utilizare a dispozitivului, a sistemului de operare și a aplicațiilor. Datele vor fi utilizate pentru localizarea și analizarea problemelor de sistem și nu vor fi folosite pentru a vă identifica.</string>
