--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -119,7 +119,7 @@
     <string name="baby_sexy">Sex</string>
     <string name="baby_suffix">copil</string>
     <string name="backup_automatically_summary">Salvați toate fotografiile și videoclipurile de pe toate dispozitivele în MiCloud. Le puteți vedea, sorta, edita și partaja pe toate dispozitivele.</string>
-    <string name="backup_automatically_title">Salvare și sincronizare automată</string>
+    <string name="backup_automatically_title">Salvare automată</string>
     <string name="backup_detail_page_title">Sincronizări Mi Cloud</string>
     <string name="backup_only_in_wifi">Salvați fotografiile și videoclipurile doar dacă sunteți conectat la Wi-Fi</string>
     <string name="backup_only_in_wifi_summary">Nu se utilizează conexiunea de date mobile pentru salvarea fotografiilor și a videoclipurilor</string>
@@ -159,7 +159,7 @@
     <string name="cloud_guide_slim_title">Reduceți dimensiunea fotografiilor din memoria internă pentru a elibera %1$s</string>
     <string name="cloud_guide_welcome_title">Mi Cloud</string>
     <string name="cloud_screenshots_display_name">Capturi de ecran</string>
-    <string name="cloud_settings">Mi Cloud</string>
+    <string name="cloud_settings">Copii de rezervă pentru Galerie</string>
     <string name="cloud_space_full_button_text">Obțineți mai mult spațiu de stocare în Mi Cloud</string>
     <string name="cloudfolder_cannot_start_with">"Numele dosarului nu poate începe cu '%s'"</string>
     <string name="cloudfolder_contain_invalidate_char">"Numele dosarului nu poate conţine '%s'"</string>
@@ -206,7 +206,7 @@
     <string name="delete_from_album">din albumul \"%s\" de pe toate dispozitivele</string>
     <string name="delete_from_album_no_account">din albumul \"%s\"</string>
     <string name="delete_from_all_devices">de pe toate dispozitivele</string>
-    <string name="delete_from_cloud">Ștergeți fotografiile din albumul din Cloud</string>
+    <string name="delete_from_cloud">Ștergeți fotografiile din Mi Cloud</string>
     <string name="delete_from_devices">De pe toate dispozitivele cu sincronizare automată</string>
     <string name="delete_from_devices_album">De pe toate dispozitivele pe care s-a sincronizat acest album</string>
     <string name="delete_from_homepage_album">Din albumele din Galerie</string>
@@ -338,7 +338,10 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="ignore_album">Nu se afişează</string>
     <string name="ignore_alert_title">Ascundeţi acest album?</string>
     <string name="ignore_face">Ignoraţi această persoană</string>
+    <string name="image_decode_failed">"Nu s-a putut decoda imaginea"</string>
     <string name="image_download_item_title">Descărcaţi fotografia (%s)</string>
+    <string name="image_invalid_path">Cale invalidă</string>
+    <string name="image_not_found">"Nu s-a găsit imaginea"</string>
     <string name="image_quota_fulfiled">Prea multe imagini. Ştergeţi unele imagini şi încercaţi din nou.</string>
     <string name="impunity_declaration_settings">Notificare conexiune la internet</string>
     <string name="impunity_declaration_summary">Afişare notificare conexiune la internet de fiecare dată când se accesează Galeria</string>
@@ -484,7 +487,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="picker_mobile_data_video">"Nu se pot descărca videoclipuri utilizând datele mobile; au fost omise %d."</string>
     <string name="picker_no_network_message">Conectați-vă la rețea pentru a putea descărca</string>
     <string name="picker_origin_need_download">"%1$d dintre fotografiile selectate nu sunt pe telefon (%2$dMB); le descărcați utilizând datele mobile?"</string>
-    <string name="picker_title_format">Fotografii selectate: %d</string>
+    <string name="picker_title_format">Puteți selecta %d fotografii</string>
     <string name="picker_title_selection_format">Au fost selectate %d fotografii</string>
     <string name="picker_title_unlimit">Selectați fotografiile</string>
     <string name="preparing_data">Doar o secundă…</string>
@@ -664,6 +667,8 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="video_editor_filter_sunny">Însorit</string>
     <string name="video_editor_invalid_trim_arguments">Trebuie să fie mai lung de o secundă</string>
     <string name="video_editor_loading_plugin">Încărcare..</string>
+    <string name="video_editor_loading_warning_msg">"Datorită unei erori de criptare, unele caracteristici și previzualizări pot lipsi pe durata procesului de editare. Acest lucru nu va afecta totuși rezultatul final."</string>
+    <string name="video_editor_loading_warning_title">Eroare de criptare</string>
     <string name="video_editor_more">Avansat</string>
     <string name="video_editor_not_support_tips">"Acest tip de videoclipuri nu sunt suportate"</string>
     <string name="video_editor_ok">OK</string>
