--- a/Romanian/main/SoundRecorder.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SoundRecorder.apk/res/values-ro/strings.xml
@@ -48,7 +48,7 @@
     <string name="notification_playback">Redare…</string>
     <string name="notification_recording">Înregistrare…</string>
     <string name="notification_recording_ticker">Sunete dezactivate</string>
-    <string name="notification_stopped">Înregistrare finalizată</string>
+    <string name="notification_stopped">Înregistrare oprită</string>
     <string name="notification_title_all_paused">Descărcare în pauză</string>
     <string name="notification_warning">Stocare insuficientă (mai puţin de %d minute)…</string>
     <string name="path_soundrecorder_setting">Aplicații de sistem/Înregistrare</string>
