--- a/Romanian/main/TeleService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/TeleService.apk/res/values-ro/strings.xml
@@ -122,6 +122,9 @@
     <string name="callFailed_unobtainable_number">Număr incorect</string>
     <string name="callFailed_userBusy">Linie ocupată</string>
     <string name="call_advanced_setting_title">Setări avansate</string>
+    <string name="call_background_default">Implicit</string>
+    <string name="call_background_lock_wallpaper">Imagine de fundal</string>
+    <string name="call_background_setting">Fundal apelare</string>
     <string name="call_barring_sum">Setările restricţionării apelurilor vocale</string>
     <string name="call_description_recording">Înregistrare…</string>
     <string name="call_forwarding_number_hint">Redirecţionare apeluri la</string>
@@ -832,6 +835,7 @@ Pentru mai multe opţiuni, încercaţi din nou sau apelaţi Serviciul Clienţi."
     <string name="other_settings">Alte setări de apel</string>
     <string name="other_settings_category">Altele</string>
     <string name="overseas_roaming_setting">Date mobile în roaming</string>
+    <string name="password">Parolă</string>
     <string name="password_changed">Parolă modificată cu succes</string>
     <string name="password_title">Parolă</string>
     <string name="path_answer_state_setting_title">Aplicații de sistem/Telefon/Setările apelurilor primite</string>
@@ -839,6 +843,7 @@ Pentru mai multe opţiuni, încercaţi din nou sau apelaţi Serviciul Clienţi."
     <string name="path_app_name">Aplicații de sistem/Telefon</string>
     <string name="path_auto_answer_pref_title">Aplicații de sistem/Telefon/Răspuns automat</string>
   <string name="path_autoip">Aplicații de sistem/Telefon/Setări avansate/Auto IP dialing</string>
+  <string name="path_call_background_setting_name">Aplicații de sistem/Telefon/Setări avansate/Fundal apelare</string>
     <string name="path_call_forwarding_settings">Aplicații de sistem/Telefon/Setările pentru redirecționarea apelurilor</string>
     <string name="path_call_record_auto_title">Aplicații de sistem/Telefon/Înregistrare apel/Înregistrare apeluri în mod automat</string>
     <string name="path_call_record_setting">Aplicații de sistem/Telefon/Înregistrare apel</string>
@@ -866,7 +871,7 @@ Pentru mai multe opţiuni, încercaţi din nou sau apelaţi Serviciul Clienţi."
     <string name="path_telocation_enable_title">Aplicații de sistem/Telefon/Locație/Afișare locație</string>
     <string name="path_turnover_mute_title">Aplicații de sistem/Telefon/Setările apelurilor primite/Întoarcere pentru a dezactiva soneria</string>
     <string name="path_voicemail_settings">Aplicații de sistem/Telefon/Setări avansate/Configurare</string>
-  <string name="path_voip_setting">Aplicații de sistem/Telefon/Setări VoIP</string>
+  <string name="path_voip_setting">Aplicații de sistem/Telefon/Mi Voice</string>
     <string name="pause_prompt_no">Nu</string>
     <string name="pause_prompt_str">"Se trimit tonuri
 "</string>
@@ -912,6 +917,7 @@ Telefonul dvs. se va bloca automat după o altă încercare greşită!"</string>
     <string name="please_enter_phone_number">Introduceți numărul de telefon</string>
     <string name="plmn_list_setting_add_plmn">PLMN nou</string>
     <string name="plmn_list_setting_title">Preferinţe</string>
+    <string name="port">Port</string>
     <string name="port_title">Numărul portului</string>
     <string name="preference_auto_ip_summary_disable">Dezactivat</string>
     <string name="preference_category_ringtone">Ton de sonerie și vibrare</string>
@@ -1043,6 +1049,7 @@ Cartela SIM va fi blocată după o altă încercare greşită."</string>
     <string name="save">Salvaţi</string>
     <string name="saving_account">Se salvează contul…</string>
     <string name="search_antispam_setting">Listă blocări</string>
+    <string name="search_app_name">Telefon;Înregistrarea apelurilor;Redirecționarea apelurilor;redirecționare;Apel în așteptare;Lista blocărilor;Codul țării;Codul ariei;Codurile țării;Codurile ariei;Înregistrare apeluri;Înregistrare apel;Tastatură numerică;Apel;Apeluri;Telefonie;VoIP;VoLTE;Apel pierdut;Apeluri pierdute;SIP;T9;Apelare IP;FDN</string>
     <string name="search_app_name">Telefon</string>
     <string name="search_networks">Căutaţi reţele</string>
     <string name="selectContact">selectarea unei persoane din agendă</string>
